fix section border; fix image overflow for title slide

--- a/ui/css/layout/layout.scss
+++ b/ui/css/layout/layout.scss
@@ -186,6 +186,8 @@ body:not(.fp-viewing-0) .project .page-heading {
       align-self: center;
       picture {
         padding-top: 4em;
+        overflow: hidden;
+        max-height: calc(100vh - 4em);
         img {
           width: 100%;
           min-width: 580px;
