--- a/ui/css/style.scss
+++ b/ui/css/style.scss
@@ -168,6 +168,7 @@ a.btn-menu {
 
 .section {
   border-bottom: 1px solid $gray-border;
+  margin-bottom: -1px;
 }
 .slide {
   .text {
